--- a/configs/config.json
+++ b/configs/config.json
@@ -1,9 +1,9 @@
 ﻿{
     "ApplicationConfiguration": {
         "Paths": {
-            "Chain": "/opt/chaindata/node/Chain_{0}",
-            "Index": "/opt/chaindata/node/Index_{0}",
-            "ApplicationLogs": "/opt/chaindata/node/ApplicationLogs_{0}"
+            "Chain": "/opt/chaindata/Chain_{0}",
+            "Index": "/opt/chaindata/Index_{0}",
+            "ApplicationLogs": "/opt/chaindata/ApplicationLogs_{0}"
         },
         "P2P": {
             "Port": 20332,
