--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
 version: '3'
 services:
-  neo-privnet:
+  neo-mywish:
     build: .
-    container_name: neo-privnet
+    container_name: neo-mywish
     ports:
-      - 10333-10336:10333-10336
-      - 20333-20336:20333-20336
-      - 30333-30336:30333-30336
+      - 20332:20332
+      - 30332:30332
     volumes:
-      - /opt/node1/neo-cli/Chain
-      - /opt/node2/neo-cli/Chain
-      - /opt/node3/neo-cli/Chain
-      - /opt/node4/neo-cli/Chain
+      - ./chains:/opt/chaindata
